issue #951
implemented mklink /H in windows
This maynot work all the time but it should be an improvement
as now it didn't work on windows all the time